Made uninstantiable classes impossible to instantiate; removed garbage.